# wishlist

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
customerwishlist/: asgi.py  settings.py  urls.py  wsgi.py
insomnia/: wishlist_insomnia_doc.json
scripts/: init_app.sh
tests/test_seed/: test_seed.py
tests/test_views/: test_customer_view.py  test_product_view.py  test_token_view.py  test_wishlist_view.py
wishlist/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
wishlist/management/commands/: seed.py
wishlist/migrations/: 0001_initial.py
